# multi-agent

./: .env.example  ARCHITECTURE.md  DEEPSEEK_SETUP.md  EXAMPLES.md  QUICK_REFERENCE.md  README.md  main.py  output_simple_workflow.json  pyproject.toml  test_agents.py
example/: The AI Revolution in Healthcare: From Promise to Practice.md
src/agents/: fact_checker.py  researcher.py  writer.py
src/orchestrator/: multi_agent_orchestrator.py
